[package]
name = "catbuffer-rust"
version = "0.1.1-alpha.1"
authors = ["The BlockPuppet Developers", "The Symbol SDK Rust Project Developers"]
description = "Serialize and deserialize NEM's Catapult entities in Rust applications."
readme = "README.md"
license = "MIT"
repository = "https://github.com/BlockPuppets/catbuffer-rust"
documentation = "https://docs.rs/catbuffer-generated"
keywords = ["symbol", "nem", "catbuffer"]
categories = ["buffer", "serialize", "deserialize"]
exclude = [".gitignore"]
edition = "2018"

[lib]
name = "catbuffer_rust"
crate-type = ["lib"]

[dependencies.num-derive]
version = "0.3"
default-features = false

[dependencies.num-traits]
version = "0.2"
default-features = false

[dependencies.strum]
version = "0.21"

[dependencies.strum_macros]
version = "0.21"

[dev-dependencies]
hex = "^0.4"